[package]
name = "slashbot"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
dotenv = "0.15"
once_cell = "1"
rand = "0.8"
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
