[package]
name = "slashbot"
version = "0.1.0"
authors = ["Daniel Martinez <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.62"
dotenv = "0.15.0"
once_cell = "1.13.1"
rand = "0.8.5"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
